[package]
name = "batched-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = { version = "0.5.15", optional = true }
parking_lot = { version = "0.12.3", optional = true }
tokio = { version = "1.34", optional = true, features = ["full"] }

[features]
default = ["sync"]
sync = ["parking_lot", "crossbeam-channel"]
async = ["tokio"]
