[package]
name = "batched-queue"
description = "A high-performance, lock-free batched queue implementation for Rust."
readme = "README.md"
categories = ["concurrency", "data-structures"]
keywords = ["message queue", "batched", "lock-free", "concurrent", "async"]

version = "0.1.0"
edition = "2024"

license-file = "LICENSE"

documentation = "https://docs.rs/batched-queue"
homepage = "https://github.com/SeedyROM/batched-queue"
repository = "https://github.com/SeedyROM/batched-queue"

[dependencies]
crossbeam-channel = { version = "0.5.15", optional = true }
parking_lot = { version = "0.12.3", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.34", optional = true, features = ["full"] }
tracing = { version = "0.1.41", optional = true }

[features]
default = ["sync"]
tracing = ["dep:tracing"]
sync = ["parking_lot", "crossbeam-channel"]
async = ["tokio"]
